picture name changes

--- a/project/contact_us.html
+++ b/project/contact_us.html
@@ -23,7 +23,7 @@
         
         <div id="main_contact">
             <div id="column_1">
-                <img id="contact_icon" src="images/contact.svg" alt="envelope icon">
+                <img id="contact_icon" src="images/contact_icon.svg" alt="envelope icon">
                 <h2>Contact us!</h2>
                 <p id="contact_info">We would love to hear from you! If you love our product and want to tell us thanks, or you hate our product and want your money back, please
                     reach out to us. Or, perhaps you have feedback on design improvements. Reach out to us at the link below.</p>
@@ -49,8 +49,8 @@
                 </p>
             </div>
             <div id="column_4">
-                <img id="rylan" src="images/Rylan.jpg" alt="Rylan">
-                <img id="adam" src="images/Adam.jpg" alt="Adam">
+                <img id="rylan" src="images/rylan.jpg" alt="Rylan">
+                <img id="adam" src="images/adam.jpg" alt="Adam">
             </div>
 
         </div>
