--- a/project/header.html
+++ b/project/header.html
@@ -1,7 +1,7 @@
 <header>
     <div id="banner" >
-        <img id="logo" src="images/DuoDocksLogo.png">
-        <img id="header_background" src="images/all 3 mag (Medium).jpg">
+        <img id="logo" src="images/duodocks_logo.png">
+        <img id="header_background" src="images/all_3_mag.jpg">
         <h1 id="banner">DuoDocks</h1>
         <h2 id="tagline">The best dock for your Duo!</h2>
     </div>
