--- a/project/index.html
+++ b/project/index.html
@@ -22,7 +22,7 @@
         switch(selection_number) {
             case 1:
                 //duo2
-                img.src="images/DuoDock_2.jpg"
+                img.src="images/duodock_2.jpg"
                 text_block.innerHTML = "The DuoDock 2 for the Surface Duo 2. \
                 <ul>\
                     <li>Full PD100 charging (5V @ 20Amp)\
@@ -36,7 +36,7 @@
                 break;
             case 2:
                 //duo1 mag
-                img.src="images/black mag profile (Medium).jpg"
+                img.src="images/black_mag_profile.jpg"
                 text_block.innerHTML = "The Magnetic DuoDock for the Surface Duo. \
                 <ul>\
                     <li>Full PD100 charging (5V @ 20Amp)\
@@ -52,7 +52,7 @@
                 break;
             case 3:
                 //duo1 usb-c
-                img.src="images/white usb c (Medium).jpg"
+                img.src="images/white_usbc.jpg"
                 text_block.innerHTML = "The original USB-C DuoDock for the Surface Duo. \
                 <ul>\
                     <li>Full PD100 charging (5V @ 20Amp)\
@@ -67,7 +67,7 @@
                 break;
             case 4:
                 //mag cable
-                img.src="images/magnetic_cable (medium).jpg"
+                img.src="images/magnetic_cable.jpg"
                 text_block.innerHTML = "1.5 meter magnetic cable. Includes the magnetic connector that comes with the Magnetic DuoDock.";
                 break;
 
@@ -106,7 +106,8 @@
             </div>
             <div id="video">
                 <h2>In Action</h2>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/GSAK625-Dfo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/GSAK625-Dfo" title="YouTube video player" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div id="product_text_div">
                 <p id="product_text">blank text.</p>
@@ -115,9 +116,9 @@
                 <a id="square_purchase" href="#">Buy Now!</a>
             </div>
             <div id ="colors">
-                <img src="images/black usb c (Medium).jpg">
-                <img src="images/white mag with slim pen dock (Medium).jpg">
-                <img src="images/marble mag (Medium).jpg">
+                <img src="images/black_usb_c.jpg" alt="DuoDock">
+                <img src="images/white_mag_with_slim_pen_dock.jpg" alt="DuoDock">
+                <img src="images/marble_mag.jpg" alt="DuoDock">
             </div>
         </main>
         
