--- a/project/site-plan.html
+++ b/project/site-plan.html
@@ -44,8 +44,8 @@
     <hr>
     <h2>Branding</h2>
     <h3>Website Logo</h3>
-    <img src="images/DuoDocksLogo.png" alt="Logo image">
-    <img src="images/DuoDocksLogo-Transparent.png" alt="Transparent Logo image">
+    <img src="images/duodocks_logo.png" alt="Logo image">
+    <img src="images/duodocks_logo_transparent.png" alt="Transparent Logo image">
     <hr>
     <h2>
       Style Guide
@@ -232,17 +232,17 @@
 
     <p>Images for the Home page</p>
     <div class="images">
-      <img src="images/all%203%20mag%20(Medium).jpg" width=600 alt="DuoDocks at an angle">
-      <img src="images//white%20mag%20with%20slim%20pen%20dock%20and%20duo%20at%2045%20(Medium).jpg" width=300 alt="white magnetic DuoDock">
-      <img src="images/black%20mag%20profile%20(Medium).jpg" width=300 alt="black magnetic DuoDock">
-      <img src="images/white%20mag%20with%20slim%20pen%20dock%20and%20duo%20profile%20(Medium).jpg" width=300 alt="white magnetic DuoDock">
-      <img src="images/marble%20mag%20(Medium).jpg" width=300 alt="black magnetic DuoDock">
-      <img src="images/all%203%20mag%20back%20(Medium).jpg" width=600 alt="DuoDocks at an angle">
-      <img src="images/black%20usb%20c%20(Medium).jpg" width=300 alt="black magnetic DuoDock">
-      <img src="images/folded%20duo%20with%2024pin%20connector%20(Medium).jpg" width=300 alt="black magnetic DuoDock">
-      <img src="images/duo%20with%2024pin%20connector%20(Medium).jpg" width=300 alt="black magnetic DuoDock">
-      <img src="images/white%20mag%202%20(Medium).jpg" width=300 alt="black magnetic DuoDock">
-      <img src="images/marble%20mag%20with%20slim%20pen%20dock%20(Medium).jpg" width=300 alt="white magnetic DuoDock">
+      <img src="images/all_3_mag.jpg" width=600 alt="DuoDocks at an angle">
+      <img src="images/white_mag_with_slim_pen_dock_at_45.jpg" width=300 alt="white magnetic DuoDock">
+      <img src="images/black_mag_profile.jpg" width=300 alt="black magnetic DuoDock">
+      <img src="images/white_mag_with_slim_pen_dock_profile.jpg" width=300 alt="white magnetic DuoDock">
+      <img src="images/marble_mag.jpg" width=300 alt="black magnetic DuoDock">
+      <img src="images/all_3_mag_back.jpg" width=600 alt="DuoDocks at an angle">
+      <img src="images/black_usb_c.jpg" width=300 alt="black magnetic DuoDock">
+      <img src="images/folded_duo_with_24_pin_connector.jpg" width=300 alt="black magnetic DuoDock">
+      <img src="images/duo_with_24_pin_connector.jpg" width=300 alt="black magnetic DuoDock">
+      <img src="images/white_mag.jpg" width=300 alt="black magnetic DuoDock">
+      <img src="images/marble_mag_with_slim_pen_dock.jpg" width=300 alt="white magnetic DuoDock">
     </div>    
     
     <!-- Contact Page -->
@@ -255,10 +255,10 @@
     <p>Mailing List link</p>
     <p>Images for the Page 2</p>
     <div class="images">
-      <img src="images/contact.svg" width="300" alt="image for page">
-      <img src="images/DuoDock_v1_2.jpg" width=300 alt="black magnetic DuoDock">
-      <img src="images/Rylan.jpg" width=400 alt="Rylan">
-      <img src="images/Adam.jpg" width=400 alt="Adam">
+      <img src="images/contact_icon.svg" width="300" alt="image for page">
+      <img src="images/duodock_v2.jpg" width=300 alt="black magnetic DuoDock">
+      <img src="images/rylan.jpg" width=400 alt="Rylan">
+      <img src="images/adam.jpg" width=400 alt="Adam">
     </div>  
     <!-- Review Page -->
     <h3>Reviews</h3>
@@ -274,8 +274,8 @@
     </ul>
     <p>Images for Reviews</p>
     <div class="images">
-      <img src="images/reviews.svg" width="300" alt="image for page">
-      <img src="images/DuoDock_v1_3.jpg" width=300 alt="black magnetic DuoDock">
+      <img src="images/review_icon.svg" width="300" alt="image for page">
+      <img src="images/duodock_v3.jpg" width=300 alt="black magnetic DuoDock">
     </div>
     <!-- FAQ -->
     <h3>FAQ</h3>
@@ -292,8 +292,8 @@
     <p>We collect sales tax for residents of the state of Washington.</p>
 
     <div class="images">
-      <img src="images/questions.svg" width="300" alt="image for page">
-      <img src="images/DuoDock_v1.jpg" width=300 alt="black magnetic DuoDock">
+      <img src="images/questions_icon.svg" width="300" alt="image for page">
+      <img src="images/duodock_v1.jpg" width=300 alt="black magnetic DuoDock">
     </div>
     <hr>
 
