--- a/project/reviews.html
+++ b/project/reviews.html
@@ -35,11 +35,11 @@
                 <h2>ScaryifLiteral Best Accessories for the Surface Duo</h2>
                 <p>In this video, ScaryifLiteral lists the DuoDock amongst the best accessories for the Surface Duo.</p>
                 <h2>Social Media Group Links</h2>
-                <img id="social_media_icon" src="images/social_media.svg" alt="review icon">
+                <img id="social_media_icon" src="images/social_media_icon.svg" alt="review icon">
             </div>
             <div id="column_4">
-                <iframe id="scary_review_2" width="560" height="315" src="https://www.youtube.com/embed/HZNk0m_k6Q8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <iframe id="scare_review_1" width="560" height="315" src="https://www.youtube.com/embed/aY16rZWy8yc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe id="scary_review_2" width="560" height="315" src="https://www.youtube.com/embed/HZNk0m_k6Q8" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe id="scare_review_1" width="560" height="315" src="https://www.youtube.com/embed/aY16rZWy8yc" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <a class="social_media" href="https://www.facebook.com/search/posts/?q=DuoDock%20Surface%20Duo%20Central">Facebook Surface Duo Central</a>
                 <a class="social_media" href="https://www.reddit.com/r/surfaceduo/search/?q=duo%20dock&restrict_sr=1&sr_nsfw=">Reddit Surface Duo</a>                
 
