--- a/project/index.html
+++ b/project/index.html
@@ -102,7 +102,7 @@
                 <button id="mag_cable" onclick="update_product_selection(4);">Magnetic Cable</button>
             </div>
             <div id="product_image_div">
-                <img id="product_image" src="images/black mag (Medium).jpg" alt="DuoDock">
+                <img id="product_image" src="images/blackmag.jpg" alt="DuoDock">
             </div>
             <div id="video">
                 <h2>In Action</h2>
