updates for header/footer

--- a/project/contact_us.html
+++ b/project/contact_us.html
@@ -25,27 +25,33 @@
             <div id="column_1">
                 <img id="contact_icon" src="images/contact_icon.svg" alt="envelope icon">
                 <h2>Contact us!</h2>
-                <p id="contact_info">We would love to hear from you! If you love our product and want to tell us thanks, or you hate our product and want your money back, please
-                    reach out to us. Or, perhaps you have feedback on design improvements. Reach out to us at the link below.</p>
+                <p id="contact_info">We would love to hear from you! If you love our product and want to tell us thanks, or you hate our product 
+                    and want your money back, or perhaps you have feedback on design improvements. Whatever your reason, please reach out to us at the link below.</p>
                 <a id="mail_link" href="mailto:duodocks@gmail.com">mailto:duodocks@gmail.com</a>
             </div>
             <div id="divider_bar"></div>
             <div id="column_3">
                 <h2>About DuoDocks</h2>
-                <p>In 2020 when I got my Duo, Rylan designed a prototype dock for me because I asked him to. Rylans a wiz with 3d cad stuff. After showing it to people online, 
+                <p>In 2020 when I got my Duo, I asked Rylan to design me dock for it. Rylan's a wiz with 3d cad stuff. After showing it to people online, 
                     they amazingly asked if they could purchase one. I was surprised, and not sure I wanted to get into selling them.
-                    But they helped us with feedback as we did multiple iterations on the design. Fast forward a few months, and we decided that we could learn a lot about
-                    how to run a business, and Rylan could use the money for college. So around Jan 2021 DuoDocks was launched. In April, we started getting unsolicited publicity, 
+                    But they helped us with feedback as we did multiple iterations on the design. Fast forward a few months, 
+                    and we decided that we could learn a lot about how to run a business, and Rylan could use the money for college. 
+                    So Jan 2021 DuoDocks was launched. In April, we started getting unsolicited publicity, 
                     and we had to purchase 2 more 3d printers to keep up with all the orders. </p>
-                <p> We didn't stand still on the design, and improved the magnetic connector version during mid 2021, and we sourced additional magnetic connectors and cables to be able to supply
-                    to customers that would make their experience better. We learned that boxes protect our product way better than bubble mailers, and are worth the additional expense! </p>
+                <p> We didn't stand still on the design, and improved the magnetic connector version during mid 2021, and we sourced additional 
+                    magnetic connectors and cables to be able to supply to customers that would make their experience better. We learned that 
+                    boxes protect our product way better than bubble mailers, and are worth the additional expense! </p>
+                    <p>Above all, we learned that people are awesome, and that the Surface Duo has a loyal customer base! And we couldn't be 
+                        prouder being part of this community.
+                    </p>
                 <h2>About Rylan</h2>
-                <p>Rylan is currently enrolled at BYU-Idaho, studying Applied Technology. He does all the 3d cad, manufacturing, assembly and shipping. By purchasing a DuoDock, you are helping 
-                    Rylan pay for college. Thanks!
+                <p>Rylan is currently enrolled at BYU-Idaho, studying Applied Technology. He does all the 3d cad, manufacturing, assembly and shipping. 
+                    By purchasing a DuoDock, you are helping Rylan pay for college. Thanks!
                 </p>
                 <h2>About Adam</h2>
-                <p>Adam is a Senior Engineering Manager at a major software company in the Seattle area. He left Microsoft after 22 years, but is still a big fan of their hardware, thus the passion around the Surface line.
-                    Adam takes care of procurement of equipment and supplies, licensing, taxes, website and customer issues.
+                <p>Adam is a Senior Engineering Manager at a major software company in the Seattle area. He left Microsoft after 22 years, but is still 
+                    a big fan of their hardware, thus the passion around the Surface line. Adam takes care of procuring equipment and supplies, 
+                    licensing, taxes, website and customer issues.
                 </p>
             </div>
             <div id="column_4">
