--- a/project/header.html
+++ b/project/header.html
@@ -1,7 +1,7 @@
 <header>
     <div id="banner" >
         <img id="logo" src="images/duodocks_logo.png">
-        <img id="header_background" src="images/all_3_mag.jpg">
+        <img id="header_background" src="images/all_3_mag.jpg" alt="DuoDock image">
         <h1 id="banner">DuoDocks</h1>
         <h2 id="tagline">The best dock for your Duo!</h2>
     </div>
@@ -12,4 +12,5 @@
         <a href="faq.html">FAQ</a>
     </nav>
 
-</header>
+</header>    
+
