week11 initial commit of CSS

--- a/project/faq.html
+++ b/project/faq.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DuoDocks FAQ</title>
+    <link type="text/css" rel="stylesheet" href="styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200&family=Lato&display=swap" rel="stylesheet">
+
     <script
         src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
@@ -22,7 +27,7 @@
         <div id="header"></div>
         <div id="main_faq">
             <div id="column_1">
-                <img id="questions_icon" src="images/questions.svg" alt="question icon">
+                <img id="questions_icon" src="images/questions_icon.svg" alt="question icon">
                 <h2>You've got questions?<br>We've got answers!</h2>
                 <p id="question_info">So we know that you want to make informed decisions. We do too! Here's a collection of the most common questions we get.</p>
                 <h2>Didn't answer your question?<br>Email us!</h2>
