--- a/project/header.html
+++ b/project/header.html
@@ -1,8 +1,7 @@
 <header>
     <div id="banner" >
-        <img id="logo" src="images/duodocks_logo.png">
+        <img id="logo" src="images/duodocks_logo_transparent.png">
         <img id="header_background" src="images/all_3_mag.jpg" alt="DuoDock image">
-        <h1 id="banner">DuoDocks</h1>
         <h2 id="tagline">The best dock for your Duo!</h2>
     </div>
     <nav>
