--- a/project/index.html
+++ b/project/index.html
@@ -28,9 +28,9 @@
             case 1:
                 //duo2
                 img.src="images/duodock_2.jpg"
-                text_block.innerHTML = "The DuoDock 2 for the Surface Duo 2. \
+                text_block.innerHTML = "<b>The DuoDock 2 for the Surface Duo 2.</b> \
                 <ul>\
-                    <li>Full PD100 charging (5V @ 20Amp)\
+                    <li>Full PD100 charging (5V @ 20Amp)</li>\
                     <li>Full USB 3.1 Connectivity supporting video and data.</li>\
                     <li>Multiple colors available</li>\
                     <li>Supports all bumper/cover configurations.</li>\
@@ -42,7 +42,7 @@
             case 2:
                 //duo1 mag
                 img.src="images/black_mag_profile.jpg"
-                text_block.innerHTML = "The Magnetic DuoDock for the Surface Duo. \
+                text_block.innerHTML = "<b>The Magnetic DuoDock for the Surface Duo.</b> \
                 <ul>\
                     <li>Full PD100 charging (5V @ 20Amp)\
                     <li>24 USB 3.1 Magnetic connector included</li>\
@@ -58,9 +58,9 @@
             case 3:
                 //duo1 usb-c
                 img.src="images/white_usbc.jpg"
-                text_block.innerHTML = "The original USB-C DuoDock for the Surface Duo. \
+                text_block.innerHTML = "<b>The original USB-C DuoDock for the Surface Duo.</b> \
                 <ul>\
-                    <li>Full PD100 charging (5V @ 20Amp)\
+                    <li>Full PD100 charging (5V @ 20Amp)</li>\
                     <li>Full USB 3.1 Connectivity supporting video and data.</li>\
                     <li>Includes Pen storage.</li>\
                     <li>Multiple colors available</li>\
@@ -73,7 +73,10 @@
             case 4:
                 //mag cable
                 img.src="images/magnetic_cable.jpg"
-                text_block.innerHTML = "1.5 meter magnetic cable. Includes the magnetic connector that comes with the Magnetic DuoDock.";
+                text_block.innerHTML = "<b>1.5 meter magnetic cable.</b> \
+                <ul>\
+                    <li>Includes the magnetic connector that comes with the Magnetic DuoDock.</li>\
+                </ul>";
                 break;
 
         }
@@ -81,10 +84,10 @@
 </script> 
 </head>
 <body onload="update_product_selection(1);">
-    <div id="content">
         <div id="header"></div>
 
         <main>
+            <div class="content">
             <div id="news">
                 <h2>Latest News</h2>
                 <p>We are happy to begin shipping the DuoDock 2 for the Surface Duo 2! 
@@ -105,29 +108,29 @@
                 <button id="duo_1_mag" onclick="update_product_selection(2);">DuoDock for Surface Duo (Magnetic)</button>
                 <button id="duo_1_usbc" onclick="update_product_selection(3);">DuoDock for Surface Duo (USB-C)</button>
                 <button id="mag_cable" onclick="update_product_selection(4);">Magnetic Cable</button>
+                <div id = "square_link">
+                    <a id="square_purchase" href="https://duodocks.square.site">Buy Now at Square</a>
+                </div>
             </div>
             <div id="product_image_div">
                 <img id="product_image" src="images/blackmag.jpg" alt="DuoDock">
             </div>
             <div id="video">
                 <h2>In Action</h2>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/GSAK625-Dfo" title="YouTube video player" 
+                <iframe width="700" height="360" src="https://www.youtube.com/embed/GSAK625-Dfo" title="YouTube video player" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div id="product_text_div">
                 <p id="product_text">blank text.</p>
             </div>
-            <div id = "square_link">
-                <a id="square_purchase" href="#">Buy Now!</a>
-            </div>
-            <div id ="colors">
+            <!-- <div id ="colors">
                 <img src="images/black_usb_c.jpg" alt="DuoDock">
                 <img src="images/white_mag_with_slim_pen_dock.jpg" alt="DuoDock">
                 <img src="images/marble_mag.jpg" alt="DuoDock">
-            </div>
+            </div> -->
         </main>
-        
+        </div> 
         <div id="footer"></div>
-    </div>
+
 </body>
 </html>
