--- a/project/index.html
+++ b/project/index.html
@@ -34,7 +34,7 @@
                     <li>Full USB 3.1 Connectivity supporting video and data.</li>\
                     <li>Multiple colors available</li>\
                     <li>Supports all bumper/cover configurations.</li>\
-                    <li>Great design.</li>\
+                    <li>Perfect angle for use at your desk.</li>\
                     <li>Stable and non-slip.</li>\
                     <li>Solid/Substantial, weighing 4oz</li>\
                 </ul>";
@@ -50,7 +50,7 @@
                     <li>Includes Pen storage.</li>\
                     <li>Multiple colors available</li>\
                     <li>Supports all bumper/cover configurations.</li>\
-                    <li>Great design.</li>\
+                    <li>Perfect angle for use at your desk.</li>\
                     <li>Stable and non-slip.</li>\
                     <li>Solid/Substantial, weighing 4oz</li>\
                 </ul>";
@@ -65,7 +65,7 @@
                     <li>Includes Pen storage.</li>\
                     <li>Multiple colors available</li>\
                     <li>Supports all bumper/cover configurations.</li>\
-                    <li>Great design.</li>\
+                    <li>Perfect angle for use at your desk.</li>\
                     <li>Stable and non-slip.</li>\
                     <li>Solid/Substantial, weighing 4oz</li>\
                 </ul>";
