--- a/project/index.html
+++ b/project/index.html
@@ -117,17 +117,15 @@
             </div>
             <div id="video">
                 <h2>In Action</h2>
-                <iframe width="700" height="360" src="https://www.youtube.com/embed/GSAK625-Dfo" title="YouTube video player" 
+                <iframe width="770" height="440" src="https://www.youtube.com/embed/GSAK625-Dfo" title="YouTube video player" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div id="product_text_div">
                 <p id="product_text">blank text.</p>
             </div>
-            <!-- <div id ="colors">
-                <img src="images/black_usb_c.jpg" alt="DuoDock">
-                <img src="images/white_mag_with_slim_pen_dock.jpg" alt="DuoDock">
-                <img src="images/marble_mag.jpg" alt="DuoDock">
-            </div> -->
+            <div id ="colors">
+                <img src="images/marble_mag_with_slim_pen_dock.jpg" alt="DuoDock">
+            </div>
         </main>
         </div> 
         <div id="footer"></div>
