adding site plan link

--- a/project/footer.html
+++ b/project/footer.html
@@ -2,6 +2,7 @@
     <h3>DuoDocks &copy; 2022 - Adam Ulrich</h3>
     <h3><a href="contact_us.html">CONTACT US</a></h3>
     <h3><a href="reviews.html">REVIEWS</a></h3>
+    <h3><a href="site-plan.html">SITE PLAN</a></h3>
     <h3><a href="faq.html">FAQ</a></h3>
     
     <div class="social">
