--- a/project/contact_us.html
+++ b/project/contact_us.html
@@ -22,7 +22,7 @@
 </script> 
 </head>
 <body>
-    <div id="content">
+    <div id="content_contact">
         <div id="header"></div>
         
         <div id="main_contact">
@@ -34,7 +34,7 @@
                 <a id="mail_link" href="mailto:duodocks@gmail.com">mailto:duodocks@gmail.com</a>
             </div>
             <div id="divider_bar"></div>
-            <div id="column_3">
+            <div id="about_duodocks">
                 <h2>About DuoDocks</h2>
                 <p>In 2020 when I got my Duo, I asked Rylan to design me dock for it. Rylan's a wiz with 3d cad stuff. After showing it to people online, 
                     they amazingly asked if they could purchase one. I was surprised, and not sure I wanted to get into selling them.
@@ -45,23 +45,21 @@
                 <p> We didn't stand still on the design, and improved the magnetic connector version during mid 2021, and we sourced additional 
                     magnetic connectors and cables to be able to supply to customers that would make their experience better. We learned that 
                     boxes protect our product way better than bubble mailers, and are worth the additional expense! </p>
-                    <p>Above all, we learned that people are awesome, and that the Surface Duo has a loyal customer base! And we couldn't be 
-                        prouder being part of this community.
-                    </p>
+                <p>Above all, we learned that people are awesome, and that the Surface Duo has a loyal customer base! And we couldn't be 
+                    prouder being part of this community.</p>
+            </div>
+            <div id="column_3">
                 <h2>About Rylan</h2>
                 <p>Rylan is currently enrolled at BYU-Idaho, studying Applied Technology. He does all the 3d cad, manufacturing, assembly and shipping. 
-                    By purchasing a DuoDock, you are helping Rylan pay for college. Thanks!
-                </p>
+                    By purchasing a DuoDock, you are helping Rylan pay for college. Thanks!</p>
                 <h2>About Adam</h2>
                 <p>Adam is a Senior Engineering Manager at a major software company in the Seattle area. He left Microsoft after 22 years, but is still 
                     a big fan of their hardware, thus the passion around the Surface line. Adam takes care of procuring equipment and supplies, 
                     licensing, taxes, website and customer issues.
                 </p>
             </div>
-            <div id="column_4">
                 <img id="rylan" src="images/rylan.jpg" alt="Rylan">
                 <img id="adam" src="images/adam.jpg" alt="Adam">
-            </div>
 
         </div>
 
