initial CSS in for all pages.

--- a/project/contact_us.html
+++ b/project/contact_us.html
@@ -29,8 +29,8 @@
             <div id="column_1">
                 <img id="contact_icon" src="images/contact_icon.svg" alt="envelope icon">
                 <h2>Contact us!</h2>
-                <p id="contact_info">We would love to hear from you! If you love our product and want to tell us thanks, or you hate our product 
-                    and want your money back, or perhaps you have feedback on design improvements. Whatever your reason, please reach out to us at the link below.</p>
+                <p id="contact_info">We would love to hear from you! <br><br>If you love our product and want to tell us thanks, or you hate our product 
+                    and want your money back, let us know! <br><br> Or perhaps you have feedback on design improvements? <br><br>Whatever your reason, please reach out to us at the link below.</p>
                 <a id="mail_link" href="mailto:duodocks@gmail.com">mailto:duodocks@gmail.com</a>
             </div>
             <div id="divider_bar"></div>
@@ -48,16 +48,19 @@
                 <p>Above all, we learned that people are awesome, and that the Surface Duo has a loyal customer base! And we couldn't be 
                     prouder being part of this community.</p>
             </div>
-            <div id="column_3">
+            <div class="rylan">
                 <h2>About Rylan</h2>
-                <p>Rylan is currently enrolled at BYU-Idaho, studying Applied Technology. He does all the 3d cad, manufacturing, assembly and shipping. 
+                <p >Rylan is currently enrolled at BYU-Idaho, studying Applied Technology. He does all the 3d cad, manufacturing, assembly and shipping. 
                     By purchasing a DuoDock, you are helping Rylan pay for college. Thanks!</p>
+            </div>
+            <div class="adam">
                 <h2>About Adam</h2>
                 <p>Adam is a Senior Engineering Manager at a major software company in the Seattle area. He left Microsoft after 22 years, but is still 
                     a big fan of their hardware, thus the passion around the Surface line. Adam takes care of procuring equipment and supplies, 
                     licensing, taxes, website and customer issues.
                 </p>
             </div>
+            </section>
                 <img id="rylan" src="images/rylan.jpg" alt="Rylan">
                 <img id="adam" src="images/adam.jpg" alt="Adam">
 
