--- a/project/faq.html
+++ b/project/faq.html
@@ -23,29 +23,34 @@
 </script> 
 </head>
 <body>
-    <div id="content">
+    <div id="faq_content">
         <div id="header"></div>
         <div id="main_faq">
             <div id="column_1">
                 <img id="questions_icon" src="images/questions_icon.svg" alt="question icon">
                 <h2>You've got questions?<br>We've got answers!</h2>
-                <p id="question_info">So we know that you want to make informed decisions. We do too! Here's a collection of the most common questions we get.</p>
+                <p id="question_info">Hey... We know that you want to make informed decisions. We do too! Here's a collection of the most common questions we get.</p>
                 <h2>Didn't answer your question?<br>Email us!</h2>
                 <a id="mail_link" href="mailto:duodocks@gmail.com">mailto:duodocks@gmail.com</a>
             </div>
-            <div id="divider_bar"></div>
-            <div id="column_3">
-                <p>Where do you ship? How Much Does it cost?</p>
-                <p>Do you charge US Sales Tax?</p>
-                <p>Do you charge EU VAT</p>
-            </div>
-            <div id="column_4">
-                <p>We ship everywhere in the world via Shippo. US shipping is a flat rate of US $5.00. International shipping is a flat rate of US $20.00.</p>
-                <p>If you are a state of Washington resident, we charge sales tax. </p>
-                <p>We don't charge the EU VAT, but you may be required to pay it when it arrives at your location, and it has been held at the local Post Office. 
-                    We have had people not get notified that they have a package waiting at their Post Office. You should get tracking information from Shippo, 
-                    and it would indicate that it is in this held state.</p>
-            </div>
+            <div id="divider_bar_faq"></div>
+            <p class="question">Where do you ship? How Much Does it cost?</p>
+            <p class="question">Do you charge US Sales Tax?</p>
+            <p class="question">Do you charge EU VAT?</p>
+            <p class="question">Why don't you have a pen holder for the DuoDock 2?</p>
+            <p class="question">Will you make a dock for my Samsung (fill in the blank with a model here)?</p>
+            <p class="question">Can I get a different color than black, white or marble?</p>
+            <p class="answer">We ship everywhere in the world via Shippo. US shipping is a flat rate of US $5.00. International shipping is a flat rate of US $20.00.</p>
+            <p class="answer">If you are a state of Washington resident, we charge sales tax. </p>
+            <p class="answer">We don't charge the EU VAT, but you may be required to pay it when it arrives at your location. 
+                We have had people not get notified that they have a package waiting at their Post Office. Please check your mail carefully for a note from the Post Office. 
+                You should get tracking information from Shippo, and it would indicate that it is in this held state.</p>
+            <p class="answer">Because the slim pen magnetically attaches to both the bare Duo 2, or the charging cover. So it already has a great place for storage!</p>
+            <p class="answer">We probably won't ever make a Dock for anything besides the Surface Duo. We like this little market; we're not looking to grow significantly 
+                anytime soon. This is a fun side project. :) </p>
+            <p class="answer">If you put special instructions in the order with a note to us, and we happen to have that color on hand, we will 
+                attempt it. But if we don't, we will ship you the color you ordered.</p>
+            </p class="answer">
 
         </div>
  
