--- a/project/reviews.html
+++ b/project/reviews.html
@@ -29,27 +29,31 @@
             <div id="column_1">
                 <img id="review_icon" src="images/review_icon.svg" alt="envelope icon">
                 <h2>Reviews</h2>
-                <p>
-                </p>
+                <p>Hey, don't take our word for it. Check out what other people say about the DuoDock!</p>
 
             </div>
             <div id="divider_bar"></div>
-            <div id="column_3">
+            
+            <div id="review_1_text">
                 <h2>ScaryifLiteral Review</h2>
                 <p>ScaryifLiteral is a youtube reviewer of technology, and has a particular passion around next generation foldable phones. In this review, he speaks specifically about the DuoDock v1.</p>
-                <h2>ScaryifLiteral Best Accessories for the Surface Duo</h2>
-                <p>In this video, ScaryifLiteral lists the DuoDock amongst the best accessories for the Surface Duo.</p>
-                <h2>Social Media Group Links</h2>
+            </div>
+            <div id="review_2_text">
+            <h2>ScaryifLiteral Best Accessories for the Surface Duo</h2>
+            <p >In this video, ScaryifLiteral lists the DuoDock amongst the best accessories for the Surface Duo.</p>
+            </div>
+            <div id="social_media_header">
+                <h2 >Social Media Links</h2>
                 <img id="social_media_icon" src="images/social_media_icon.svg" alt="review icon">
             </div>
-            <div id="column_4">
-                <iframe id="scary_review_2" width="560" height="315" src="https://www.youtube.com/embed/HZNk0m_k6Q8" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <iframe id="scare_review_1" width="560" height="315" src="https://www.youtube.com/embed/aY16rZWy8yc" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe id="scary_review_1" width="560" height="315" src="https://www.youtube.com/embed/aY16rZWy8yc" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe id="scary_review_2" width="560" height="315" src="https://www.youtube.com/embed/HZNk0m_k6Q8" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div id="social_media_links">
                 <a class="social_media" href="https://www.facebook.com/search/posts/?q=DuoDock%20Surface%20Duo%20Central">Facebook Surface Duo Central</a>
+                <br>
+                <br>
                 <a class="social_media" href="https://www.reddit.com/r/surfaceduo/search/?q=duo%20dock&restrict_sr=1&sr_nsfw=">Reddit Surface Duo</a>                
-
             </div>
-
         </div>
 
 
