--- a/project/footer.html
+++ b/project/footer.html
@@ -1,10 +1,10 @@
 <footer>
     <h3>DuoDocks &copy; 2022 - Adam Ulrich</h3>
-    <h3><a href="contact_us.html">CONTACT US</a></h3>
-    <h3><a href="reviews.html">REVIEWS</a></h3>
-    <h3><a href="site-plan.html">SITE PLAN</a></h3>
-    <h3><a href="reviews.html">REVIEWS</a></h3>
+    <h3><a href="contact_us.html">Contact Us</a></h3>
+    <h3><a href="reviews.html">Reviews</a></h3>
     <h3><a href="faq.html">FAQ</a></h3>
+    <h3><a href="site-plan.html">Site Plan</a></h3>
+
     
     <div class="social">
         <a href="https://facebook.com" target="_blank">
