--- a/project/index.html
+++ b/project/index.html
@@ -27,7 +27,7 @@
         switch(selection_number) {
             case 1:
                 //duo2
-                img.src="images/duodock_2.jpg"
+                img.src="images/duodock2_white_duo2_2.JPG"
                 text_block.innerHTML = "<b>The DuoDock 2 for the Surface Duo 2.</b> \
                 <ul>\
                     <li>Full PD100 charging (5V @ 20Amp)</li>\
